[package]
name = "benchmarks"
version = "0.1.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2018"

[dependencies]
rand = "0.7.0"
borsh = { path = "../borsh" }
serde = { version = "1.0", features = ["derive"] }
speedy-derive = "0.3.6"
speedy = "0.4.2"

[dev-dependencies]
bencher = "0.1.5"
bincode = "1.1.4"
serde_cbor = "0.10"
lazy_static = "1.3.0"


[[bench]]
name = "bench"
harness = false
