[package]
name = "benchmarks"
version = "0.1.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2018"

# This is somehow needed for command line arguments to work: https://github.com/bheisler/criterion.rs/issues/193#issuecomment-415740713
[lib]
bench = false

[dependencies]
rand_xorshift = "0.2.0"
rand = "0.7.0"
borsh = { path = "../borsh" }
serde = { version = "1.0", features = ["derive"] }
speedy-derive = "0.3.6"
speedy = "0.4.2"

[dev-dependencies]
criterion = "0.3.0"
bincode = "1.1.4"
serde_cbor = "0.10"


[[bench]]
name = "bench"
harness = false
