[package]
name = "borsh-derive-internal"
version = "0.2.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
categories = ["encoding", "network-programming"]
repository = "https://github.com/nearprotocol/borsh"
homepage = "http://borsh.io"
description = """
Binary Object Representation Serializer for Hashing
"""

[dependencies]
proc-macro2 = "0.4.30"
syn = {version = "0.15.34", features = ["full", "fold"] }
quote = "0.6.12"

[dev-dependencies]
rustfmt-nightly = {version = "1.4.5", features = ["cargo-fmt"] }
pretty_assertions = "0.6.1"
