[package]
name = "borsh-derive-internal"
version = "0.2.5"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
categories = ["encoding", "network-programming"]
repository = "https://github.com/nearprotocol/borsh"
homepage = "http://borsh.io"
description = """
Binary Object Representation Serializer for Hashing
"""

[dependencies]
proc-macro2 = "0.4.30"
syn = {version = "0.15.34", features = ["full", "fold"] }
quote = "0.6.12"
