[package]
name = "borsh-derive-internal"
version = "0.2.9"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
categories = ["encoding", "network-programming"]
repository = "https://github.com/nearprotocol/borsh"
homepage = "http://borsh.io"
description = """
Binary Object Representation Serializer for Hashing
"""

[dependencies]
proc-macro2 = "1"
syn = {version = "1", features = ["full", "fold"] }
quote = "1"
