[package]
name = "borsh-schema-derive-internal"
version = "0.4.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2018"
license = "Apache-2.0"
categories = ["encoding", "network-programming"]
repository = "https://github.com/nearprotocol/borsh"
homepage = "http://borsh.io"
description = """
Schema Generator for Borsh
"""

[dependencies]
proc-macro2 = "1"
syn = {version = "1", features = ["full", "fold"] }
quote = "1"
