[package]
name = "borsh"
version = "0.6.2"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
categories = ["encoding", "network-programming"]
repository = "https://github.com/nearprotocol/borsh"
homepage = "http://borsh.io"
description = """
Binary Object Representation Serializer for Hashing
"""

[lib]
name = "borsh"
path = "src/lib.rs"

[[bin]]
name = "generate_schema_schema"
path = "src/generate_schema_schema.rs"

[dependencies]
borsh-derive = { path = "../borsh-derive", version = "0.6.2" }

[features]
default = ["std"]

# Provides impls for common standard library types like Vec<T>.
# Requires a dependency on the Rust standard library.
std = []
