[package]
name = "borsh-schema-derive"
version = "0.1.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2018"
license = "Apache-2.0"
categories = ["encoding", "network-programming"]
repository = "https://github.com/nearprotocol/borsh"
homepage = "http://borsh.io"
description = """
Schema Generator for Borsh
"""

[lib]
proc-macro = true

[dependencies]
borsh-derive-internal = { path = "../borsh-schema-derive-internal" , version="0.1.0"}
syn = {version = "1", features = ["full", "fold"] }

